# axbot-docs

./: 404.html  AGENTS.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
command-list/base-cmd/: index.html
command-list/funny-cmd/: index.html
command-list/qq-group/: index.html
command-list/subscribe-cmd/: index.html
command-list/wt-cmd/: index.html
data-intro/wt-player-data/: index.html
docs/: sponsor.md
docs/command-list/: base-cmd.md  funny-cmd.md  qq-group.md  subscribe-cmd.md  wt-cmd.md
report/: index.html
roadmap/: index.html
search/: search_index.json
sponsor/: index.html
user-guide/axbot-credit/: index.html
user-guide/use-other-platform/: index.html
user-guide/use-qq-platform/: index.html
