[project]
name = "axbot-docs"
version = "0.1.0"
description = ""
authors = [{ name = "axiangcoding", email = "axiangcoding@gmail.com" }]
requires-python = ">=3.11, <4"
readme = "README.md"
dependencies = [
    "mkdocs-material>=9.7.6,<10",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
